--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@
     padding: 3px;
 }
 .edit-form-control {
+    outline: none;
     border-radius: 5px;
     padding: 6px 10px;
     border: 1px solid #ddd;
@@ -19,13 +20,10 @@
     /*box-shadow: 0 0px 1px 0px #9d9d9d;*/
     width: 100%;
 }
-<<<<<<< HEAD
 .height-35px{
     height:35px;
 }
-=======
 .required:after { content:" *";color:red }
->>>>>>> c9a3a8c1fcc4153d8a2feebc0d7c37b0d39f7bbc
 
 .edit-dropdown-control{
     border-radius: 4px;
@@ -245,8 +243,8 @@
 .radio input[type="radio"] {
     opacity: 0; }
 .radio input[type="radio"]:focus + label::before {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
+
+    outline: none;
     outline-offset: -2px; }
 .radio input[type="radio"]:checked + label::after {
     -webkit-transform: scale(1, 1);
