--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@
 }
 
 .bokor{
-    font-family: "Khmer OS Bokor",Serif;
+    font-family: "Khmer OS Freehand",Serif;
 }
 .cursor-pointer{
     cursor: pointer;
